# iai_photo

./: CMakeLists.txt  README  package.xml
include/iai_photo/: photo.h  photo_camera.hpp  photo_reporter.hpp
src/: CMakeLists.txt
src/libphoto2/: CMakeLists.txt  photo_camera.cpp  photo_camera_list.cpp  photo_image.cpp  photo_reporter.cpp
src/photo_node/: CMakeLists.txt  photo_node.cpp
src/test_photo/: CMakeLists.txt  test_photo_capture.cpp  test_photo_config.cpp
