<?xml version="1.0"?>
<package>
  <name>photo</name>
  <version>0.0.1</version>
  <description>A generic driver for digital cameras based on gphoto2</description>
  <maintainer email="xxx@xxx.xxx">Ferenc Balint-Benczedi</maintainer>
  <license>BSD</license>
  
  <author>Benjamin Pitzer</author>
  <author>Alexis Maldonado</author>
  <author>Ferenc Balint-Benczedi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> roscpp</build_depend>
  <build_depend> std_msgs</build_depend>
  <build_depend> sensor_msgs</build_depend>
  <build_depend> opencv2</build_depend>
  <build_depend> cv_bridge</build_depend>
  
  <run_depend> roscpp</run_depend>
  <run_depend> std_msgs</run_depend>
  <run_depend> sensor_msgs</run_depend>
  <run_depend> opencv2</run_depend>
  <run_depend> cv_bridge</run_depend>
  
</package>

